# libstarch

./: .cirrus.yml  .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
include/: starch.h
libaco/: Makefile.am
libstarch-0.0.1/: Makefile.am
man/: libstarch.3
src/: Makefile.am  starch.c
test/: Makefile.am  TODO.md  check_tar_gz.c
